--- a/doc/task.adoc
+++ b/doc/task.adoc
@@ -4,7 +4,7 @@
 
 === Valid anagram
 
-image::../../HackerRand3MonthsPreparationKit/doc/image-2022-01-16-11-28-23-522.png[]
+image::image-2022-01-16-18-25-01-285.png[]
 
 '''
 
@@ -12,5 +12,101 @@ image::../../HackerRand3MonthsPreparationKit/doc/image-2022-01-16-11-28-23-522.p
 
 == First and Last Index in Sorted Array
 
-image::../../HackerRand3MonthsPreparationKit/doc/image-2022-01-16-12-39-09-362.png[]
+image::image-2022-01-16-18-26-34-883.png[]
 
+'''
+
+== Third task:
+
+== Kth Largest Element
+
+image::image-2022-01-16-18-28-14-801.png[]
+
+'''
+
+== Forth task:
+
+== Symmetric Tree
+
+image::image-2022-01-16-18-23-51-418.png[]
+
+https://www.geeksforgeeks.org/symmetric-tree-tree-which-is-mirror-image-of-itself/
+
+image::image-2022-01-16-18-30-23-995.png[]
+
+
+Examples:
+
+image::image-2022-01-17-10-05-44-929.png[]
+
+image::image-2022-01-17-10-10-27-014.png[]
+
+'''
+
+== Fifth task:
+
+=== Generate Parenthesis
+
+image::image-2022-01-17-11-09-13-283.png[]
+
+Explanation:
+
+image::image-2022-01-17-11-11-26-041.png[]
+
+Invalid as follows:
+
+image::image-2022-01-17-11-11-53-245.png[]
+
+'''
+
+== Sixth task:
+
+=== Gas Station
+
+image::image-2022-01-17-11-35-23-454.png[]
+
+Explanation:
+
+image::image-2022-01-17-11-45-49-819.png[]
+
+Example:
+
+image::image-2022-01-17-11-47-27-574.png[]
+
+'''
+
+== Seventh task:
+
+=== Course Schedule
+
+image::image-2022-01-17-12-10-51-451.png[]
+
+'''
+
+== Eighth task:
+
+=== Kth Permutation
+
+image::image-2022-01-17-12-35-37-839.png[]
+
+'''
+
+== Ninth task:
+
+=== Minimum window substring
+
+image::image-2022-01-17-17-09-59-172.png[]
+
+'''
+
+== Tenth task:
+
+=== Largest rectangle in histogram
+
+image::image-2022-01-17-17-18-55-334.png[]
+
+Example:
+
+For example, given height = [2,1,5,6,2,3], return 10.
+
+image::image-2022-01-17-17-17-43-289.png[]
